client/src/components/common/Navbar/Navbar.module.sass
@import '../../../sass/variables'
@import '../../../sass/grid'

.nav
	display: flex
	flex-direction: column
	padding-top: 20px

	.top
		display: grid
		grid-auto-flow: column
		align-items: center
		grid-template-columns: repeat(3, 1fr)
		min-height: 80px

		.contacts
			display: flex
			gap: 14px

			.socialLink
				display: flex
				align-items: center
				gap: 4px
				text-decoration: none

				.subs
					font-size: 12px
					font-family: $font-lato

					&.light
						color: $asphalt-color-3

					&.dark
						color: $asphalt-color-11

				.icon
					display: flex
					align-items: center

					svg
						width: 20px
						height: 20px
						transition: $transition-default

					&.light
						fill: $black-color

					&.dark
						fill: $white-color

				&:hover
					&.facebook .icon svg
						fill: $facebook-color

					&.twitter .icon svg
						fill: $twitter-color

					&.vk .icon svg
						fill: $vk-color

					&.telegram .icon svg
						fill: $telegram-color

		.logo
			text-align: center

			.link
				text-decoration: none
				font-size: 48px
				letter-spacing: -$letter-spacing-big
				font-weight: $weight-700
				color: $black-color
				transition: $transition-default

				&:hover
					color: $cherry-color

				&.light
					color: $black-color-3

				&.dark
					color: $white-color

		.btn_sub
			justify-self: end

	.mail_icon
		width: 12px
		height: 12px

	.bottom
		position: sticky
		top: 60px
		left: 0
		right: 0

		.box
			display: grid
			grid-auto-flow: column
			grid-template-columns: 150px 1fr 150px
			justify-content: space-between
			align-items: center
			height: 60px

			.burgerBtn
				width: 26px
				height: 18px
				cursor: pointer
				transition: $transition-default

				&.light
					&:hover
						fill: $asphalt-color-9

				&.dark
					fill: $white-color

					&:hover
						fill: $asphalt-color-11

			.links
				margin: auto

				.link
					position: relative
					font-weight: $weight-700
					color: $black-color
					font-size: 14px
					text-decoration: none
					cursor: pointer

					&::after
						position: absolute
						content: ''
						top: 100%
						left: 0
						width: 100%
						height: 1px
						opacity: 0
						transform: translateY(4px)
						background-color: $black-color
						transition: $transition-cubic

					&:hover
						&::after
							opacity: 1
							transform: translateY(1px)

					&.light
						color: $black-color

					&.dark
						color: $white-color

				.chevron_icon
					margin-top: 4px
					width: 9px
					height: 9px
					rotate: 180deg

					path
						fill: $black-color

					&.light path
						fill: $black-color

					&.dark path
						fill: $white-color

			.meta
				display: grid
				grid-auto-flow: column
				justify-content: end
				gap: 16px

				.btn_meta
					background: none
					outline: none
					border-color: transparent
					cursor: pointer

					.icon
						width: 16px
						height: 16px
						fill: $black-color
						transition: $transition_default

						&.light
							fill: $black-color

						&.dark
							fill: $white-color

					&:hover
						.icon
							fill: $asphalt-color-3

				.divider
					width: 1px
					height: 32px
					background-color: $asphalt-color-2

